--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -20,5 +20,9 @@
         <%= link_to 'Login', new_customer_session_path, class: "bg-green-500 text-white px-3 py-2 rounded ml-2" %>
       <% end %>
     </div>
+
+    <div>
+      <%= link_to 'Cart', cart_path, class: "bg-yellow-500 text-white px-3 py-2 rounded ml-1" %>
+    </div>
   </div>
 </nav>
