--- a/app/views/orders/new.html.erb
+++ b/app/views/orders/new.html.erb
@@ -1,23 +1,15 @@
-<!-- app/views/orders/new.html.erb -->
-<h1>Checkout</h1>
-<%= form_with model: @order, local: true do |form| %>
-  <%= form.hidden_field :order_date, value: Time.now %>
-  <%= form.hidden_field :status, value: 'pending' %>
-  <%= form.hidden_field :total_price, value: @cart.sum { |id, details| Product.find(id).price * details['quantity'] } %>
-  <%= form.hidden_field :total_tax, value: @cart.sum { |id, details| Product.find(id).price * details['quantity'] * 0.05 } %>
+<h2>Place Your Order</h2>
 
+<%= form_for @order do |f| %>
   <div class="field">
-    <%= form.label :address %>
-    <%= form.text_field :address, required: true %>
+    <%= f.label :address %><br />
+    <%= f.text_field :address %>
   </div>
-
   <div class="field">
-    <%= form.label :province %>
-    <%= form.collection_select :province_id, Province.all, :id, :name, required: true %>
+    <%= f.label :province_id, 'Province' %><br />
+    <%= f.collection_select :province_id, Province.all, :id, :name %>
   </div>
-
   <div class="actions">
-    <%= form.submit 'Place Order' %>
+    <%= f.submit "Place Order" %>
   </div>
 <% end %>
-
