--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,3 @@
-<!-- app/views/cart/show.html.erb -->
 <div class="container mx-auto p-4">
   <h1 class="text-2xl font-bold mb-4">Your Shopping Cart</h1>
 
@@ -19,13 +18,29 @@
           <tr>
             <td class="border px-4 py-2"><%= product.name %></td>
             <td class="border px-4 py-2">
-              <%= form_with url: add_to_cart_product_path(product), method: :post, local: true do %>
-                <%= number_field_tag :quantity, details['quantity'], min: 1, class: "w-16 p-2 border rounded mb-2" %>
-                <%= submit_tag 'Update', class: "bg-blue-500 text-white px-3 py-2 rounded" %>
-              <% end %>
+              <div class="flex items-center space-x-2">
+                <%= form_with(url: decrease_cart_path(id: product.id), method: :patch, local: true) do %>
+                  <%= hidden_field_tag :product_id, product.id %>
+                  <%= hidden_field_tag :quantity, details['quantity'].to_i - 1 %>
+                  <%= submit_tag "-", class: "bg-gray-300 text-gray-700 px-2 py-1 rounded" %>
+                <% end %>
+
+                <span class="bg-transparent mx-4 px-4 py-2 font-semibold text-[#333] text-md shadow-[0_0px_4px_0px_rgba(6,81,237,0.2)]">
+                  <%= details['quantity'] %>
+                </span>
+
+                <%= form_with(url: add_cart_path(id: product.id), method: :patch, local: true) do %>
+                  <%= hidden_field_tag :product_id, product.id %>
+                  <%= hidden_field_tag :quantity, details['quantity'].to_i + 1 %>
+                  <%= submit_tag "+", class: "bg-gray-300 text-gray-700 px-2 py-1 rounded" %>
+                <% end %>
+              </div>
             </td>
             <td class="border px-4 py-2">
-              <%= button_to 'Remove', remove_from_cart_product_path(product), method: :post, class: "bg-red-500 text-white px-3 py-2 rounded" %>
+              <%= form_with(url: remove_cart_path(id: product.id), method: :delete, local: true) do %>
+                <%= hidden_field_tag :product_id, product.id %>
+                <%= submit_tag "Remove", class: "bg-red-500 text-white px-3 py-2 rounded" %>
+              <% end %>
             </td>
           </tr>
         <% end %>
