--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -4,49 +4,91 @@
   <% if @cart.empty? %>
     <p>Your cart is empty.</p>
   <% else %>
-    <table class="table-auto w-full">
-      <thead>
-        <tr>
-          <th class="px-4 py-2">Product</th>
-          <th class="px-4 py-2">Quantity</th>
-          <th class="px-4 py-2">Actions</th>
-        </tr>
-      </thead>
-      <tbody>
+    <div class="grid lg:grid-cols-3 gap-12 p-6">
+      <div class="lg:col-span-2 bg-white divide-y">
         <% @cart.each do |product_id, details| %>
           <% product = Product.find(product_id) %>
-          <tr>
-            <td class="border px-4 py-2"><%= product.name %></td>
-            <td class="border px-4 py-2">
-              <div class="flex items-center space-x-2">
-                <%= form_with(url: decrease_cart_path(id: product.id), method: :patch, local: true) do %>
-                  <%= hidden_field_tag :product_id, product.id %>
-                  <%= hidden_field_tag :quantity, details['quantity'].to_i - 1 %>
-                  <%= submit_tag "-", class: "bg-gray-300 text-gray-700 px-2 py-1 rounded" %>
-                <% end %>
-
-                <span class="bg-transparent mx-4 px-4 py-2 font-semibold text-[#333] text-md shadow-[0_0px_4px_0px_rgba(6,81,237,0.2)]">
-                  <%= details['quantity'] %>
-                </span>
-
-                <%= form_with(url: add_cart_path(id: product.id), method: :patch, local: true) do %>
-                  <%= hidden_field_tag :product_id, product.id %>
-                  <%= hidden_field_tag :quantity, details['quantity'].to_i + 1 %>
-                  <%= submit_tag "+", class: "bg-gray-300 text-gray-700 px-2 py-1 rounded" %>
+          <div class="grid md:grid-cols-4 items-center gap-8 py-6" id="<%= "cart-#{product.id}" %>">
+            <div class="md:col-span-2 flex items-center gap-6">
+              <div class="w-32 h-22 shrink-0 shadow-[0_0px_4px_0px_rgba(6,81,237,0.2)] p-4">
+                <%= link_to product_path(product), data: { turbo: false } do %>
+                  <% if product.image.attached? %>
+                    <%= image_tag product.image, alt: product.name, class: "w-full h-full object-contain rounded-md" %>
+                  <% else %>
+                    <div class="w-full h-full object-contain rounded-md bg-gray-200 flex items-center justify-center">
+                      No Image Available
+                    </div>
+                  <% end %>
                 <% end %>
               </div>
-            </td>
-            <td class="border px-4 py-2">
+              <div>
+                <h3 class="text-lg font-extrabold text-[#333]">
+                  <%= link_to product_path(product), data: { turbo: false } do %>
+                    <%= product.name %>
+                  <% end %>
+                </h3>
+                <h6 class="text-md text-gray-500 mt-2">
+                  Price:
+                  <strong class="ml-2">
+                    <%= number_to_currency(product.price, unit: "$", precision: 2) %>
+                  </strong>
+                </h6>
+              </div>
+            </div>
+            <div class="flex">
+              <%= form_with(url: decrease_cart_path(id: product.id), method: :patch, local: true) do %>
+                <%= hidden_field_tag :product_id, product.id %>
+                <%= hidden_field_tag :quantity, details['quantity'].to_i - 1 %>
+                <%= submit_tag "-", class: "bg-gray-300 text-gray-700 px-2 py-1 rounded hover:bg-gray-400 cursor-pointer" %>
+              <% end %>
+
+              <span class="bg-transparent mx-4 px-4 py-2 font-semibold text-[#333] text-md shadow-[0_0px_4px_0px_rgba(6,81,237,0.2)]">
+                <%= details['quantity'] %>
+              </span>
+
+              <%= form_with(url: add_cart_path(id: product.id), method: :patch, local: true) do %>
+                <%= hidden_field_tag :product_id, product.id %>
+                <%= hidden_field_tag :quantity, details['quantity'].to_i + 1 %>
+                <%= submit_tag "+", class: "bg-gray-300 text-gray-700 px-2 py-1 rounded hover:bg-gray-400 cursor-pointer" %>
+              <% end %>
+            </div>
+            <div class="flex items-center">
+              <h4 class="text-lg font-bold text-[#333] mr-auto">
+                <%= number_to_currency(product.price * details['quantity'], unit: "$", precision: 2) %>
+              </h4>
               <%= form_with(url: remove_cart_path(id: product.id), method: :delete, local: true) do %>
                 <%= hidden_field_tag :product_id, product.id %>
-                <%= submit_tag "Remove", class: "bg-red-500 text-white px-3 py-2 rounded" %>
+                <%= submit_tag "Remove", class: "bg-red-500 text-white px-3 py-2 rounded hover:bg-red-700 cursor-pointer" %>
               <% end %>
-            </td>
-          </tr>
+            </div>
+          </div>
         <% end %>
-      </tbody>
-    </table>
-
-    <%= link_to 'Checkout', new_order_path, class: "bg-green-500 text-white px-3 py-2 rounded mt-4 inline-block" %>
+      </div>
+      <div class="bg-gray-100 rounded p-6">
+        <h3 class="text-xl font-extrabold text-[#333] border-b pb-4">
+          Order Summary
+        </h3>
+        <ul class="text-[#333] divide-y mt-6">
+          <li class="flex flex-wrap gap-4 text-md py-4 font-bold">
+            Subtotal
+            <span class="ml-auto font-bold">
+              <%= number_to_currency(@cart.sum { |product_id, details| Product.find(product_id).price * details['quantity'] }, unit: "$", precision: 2) %>
+            </span>
+          </li>
+          <li class="flex flex-wrap gap-4 text-md py-4 font-bold">
+            Shipping
+            <span class="ml-auto font-bold">
+              Free
+            </span>
+          </li>
+          <li class="text-black/[0.3] pt-2">
+            Applicable taxes will be calculated at checkout.
+          </li>
+        </ul>
+        <div class="mt-6 text-md px-6 py-2.5 w-full bg-blue-500 hover:bg-green-500 text-white rounded">
+          <%= link_to 'Checkout', new_order_path, class: "flex justify-center", data: { turbo: false } %>
+        </div>
+      </div>
+    </div>
   <% end %>
 </div>
