Past orders feature implemented

--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -50,5 +50,5 @@
     </table>
   </div>
 
-  <%= link_to 'Back to Home', root_path, class: "bg-blue-500 text-white px-3 py-2 rounded mt-4 inline-block" %>
+  <%= link_to 'Back to Orders', orders_path, class: "bg-blue-500 text-white px-3 py-2 rounded mt-4 inline-block" %>
 </div>
