--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -1,4 +1,5 @@
 <div class="container mx-auto p-4">
+  <%= link_to '<< Back to Products', products_path, class: "text-lg font-semibold mb-4 inline-block text-blue-500 hover:underline" %>
   <h1 class="text-2xl font-bold mb-4">Your Shopping Cart</h1>
 
   <% if @cart.empty? %>
