--- a/app/views/shared/_category_search.html.erb
+++ b/app/views/shared/_category_search.html.erb
@@ -1,10 +1,17 @@
 <div class="bg-gray-100 p-4">
   <div class="container mx-auto flex justify-between items-center">
     <div class="flex items-center space-x-4">
-      <button class="bg-blue-500 text-white px-4 py-2 rounded">
-        <span class="material-icons">grid_view</span>
-        CATEGORIES
-      </button>
+      <nav class="mb-6">
+        <h2 class="text-xl font-semibold">Categories</h2>
+        <ul class="flex space-x-4">
+          <% Category.all.each do |category| %>
+            <li>
+              <%= link_to category.name, category_path(category), class: "text-blue-500 hover:underline" %>
+            </li>
+          <% end %>
+        </ul>
+      </nav>
+      
       <%= form_with url: products_path, method: :get, local: true, class: "flex space-x-4 w-full" do |form| %>
         <div class="flex-grow">
           <%= form.select :category_id, options_from_collection_for_select(@categories, :id, :name, params[:category_id]), { include_blank: "All categories" }, class: "mt-1 block w-full pl-3 pr-10 py-2 border border-gray-300 rounded-md shadow-sm focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 sm:text-sm" %>
