--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -14,9 +14,9 @@
               <div class="w-32 h-22 shrink-0 shadow-[0_0px_4px_0px_rgba(6,81,237,0.2)] p-4">
                 <%= link_to product_path(product), data: { turbo: false } do %>
                   <% if product.image.attached? %>
-                    <%= image_tag product.image, alt: product.name, class: "w-full h-full object-contain rounded-md" %>
+                    <%= image_tag product.thumbnail_image, alt: product.name, class: " object-contain rounded-md" %>
                   <% else %>
-                    <div class="w-full h-full object-contain rounded-md bg-gray-200 flex items-center justify-center">
+                    <div class=" object-contain rounded-md bg-gray-200 flex items-center justify-center">
                       No Image Available
                     </div>
                   <% end %>
