--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -17,7 +17,7 @@
         <div class="border p-4 rounded-lg shadow">
           <div class="image-container">
             <% if product.image.attached? %>
-              <%= image_tag product.image, class: "w-52 h-52 object-cover mb-2" %>
+              <%= image_tag product.medium_image, class: " object-cover mb-2" %>
             <% else %>
               <div class="image-placeholder"></div>
             <% end %>
