--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -12,7 +12,7 @@
 
   <div class="image-container mb-4">
     <% if @product.image.attached? %>
-      <%= image_tag @product.image, class: "w-52 h-52 object-cover" %>
+      <%= image_tag @product.large_image, class: " object-cover" %>
     <% else %>
       <div class="image-placeholder"></div>
     <% end %>
