Tweaks to the styling of the index and show for products

--- a/app/assets/stylesheets/styles.scss
+++ b/app/assets/stylesheets/styles.scss
@@ -63,3 +63,14 @@ body {
     color: #6c757d;
   }
   
+  .green {
+    color: green;
+  }
+  
+  .orange {
+    color: orange;
+  }
+  
+  .red {
+    color: red;
+  }
