--- a/app/views/carts/show.html.erb
+++ b/app/views/carts/show.html.erb
@@ -40,17 +40,17 @@
               <%= form_with(url: decrease_cart_path(id: product.id), method: :patch, local: true) do %>
                 <%= hidden_field_tag :product_id, product.id %>
                 <%= hidden_field_tag :quantity, details['quantity'].to_i - 1 %>
-                <%= submit_tag "-", class: "bg-gray-300 text-gray-700 px-2 py-1 rounded hover:bg-gray-400 cursor-pointer" %>
+                <%= submit_tag "-", class: "bg-gray-300 text-gray-700 h-10 px-2 py-1 rounded hover:bg-gray-400 cursor-pointer" %>
               <% end %>
 
-              <span class="bg-transparent mx-4 px-4 py-2 font-semibold text-[#333] text-md shadow-[0_0px_4px_0px_rgba(6,81,237,0.2)]">
+              <span class="bg-transparent mx-2 h-10 px-4 py-2 font-semibold text-[#333] text-md shadow-[0_0px_4px_0px_rgba(6,81,237,0.2)]">
                 <%= details['quantity'] %>
               </span>
 
               <%= form_with(url: add_cart_path(id: product.id), method: :patch, local: true) do %>
                 <%= hidden_field_tag :product_id, product.id %>
                 <%= hidden_field_tag :quantity, details['quantity'].to_i + 1 %>
-                <%= submit_tag "+", class: "bg-gray-300 text-gray-700 px-2 py-1 rounded hover:bg-gray-400 cursor-pointer" %>
+                <%= submit_tag "+", class: "bg-gray-300 text-gray-700 h-10 px-2 py-1 rounded hover:bg-gray-400 cursor-pointer" %>
               <% end %>
             </div>
             <div class="flex items-center">
