--- a/app/views/products/index.html.erb
+++ b/app/views/products/index.html.erb
@@ -26,8 +26,8 @@
             <h2 class="text-xl font-semibold mt-4"><%= link_to product.name, product_path(product) %></h2>
             <p class="mb-2"><%= product.description %></p>
             <p class="text-xl font-bold mb-2 <%= product.on_sale? ? 'text-red-500' : 'text-black' %>">
-              $<%= number_with_precision(product.discounted_price || product.price, precision: 2) %>
-              <% if product.on_sale.present? %>
+              $<%= number_with_precision((product.discounted_price && product.discounted_price > 0) ? product.discounted_price : product.price, precision: 2) %>
+              <% if product.on_sale? && product.discounted_price.present? && product.discounted_price > 0 %>
                 <span class="line-through text-gray-500 text-xl">$<%= number_with_precision(product.price, precision: 2) %></span>
               <% end %>
             </p>
