--- a/app/views/products/show.html.erb
+++ b/app/views/products/show.html.erb
@@ -25,8 +25,8 @@
         <% end %>
       </p>
       <div class="text-2xl font-semibold mb-4 <%= @product.on_sale? ? 'text-red-500' : 'text-black' %>">
-        $<%= number_with_precision(@product.discounted_price > 0 ? @product.discounted_price : @product.price, precision: 2) %>
-        <% if @product.on_sale? && @product.discounted_price > 0 %>
+        $<%= number_with_precision(@product.discounted_price.presence || @product.price, precision: 2) %>
+        <% if @product.on_sale? && @product.discounted_price.present? && @product.discounted_price > 0 %>
           <span class="line-through text-gray-500 text-xl">$<%= number_with_precision(@product.price, precision: 2) %></span>
         <% end %>
       </div>
